[package]
name = "webcam-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
ffmpeg-next = "6.0"
bytes = "1.5"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }